feat : 채널 수정, 삭제 api 생성